一些试验性的jvm参数